# xb

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  WORKAROUNDS.org  initial-cache.cmake  sanitizing-cache.cmake  xb-config.cmake.in
cmake/: xbFetchSchemas.cmake  xbGenerateCpp.cmake  xb_deps.cmake
schema/: test-addressbook.rnc  test-addressbook.rng  xb-typemap.xsd
scripts/: check-format.sh
src/: CMakeLists.txt
src/include/: CMakeLists.txt
src/include/xb/: CMakeLists.txt  annotation.hpp  any_attribute.hpp  any_element.hpp  assertion.hpp  attribute_decl.hpp  attribute_group_def.hpp  codegen.hpp  complex_type.hpp  config.hpp.in  content_type.hpp  cpp_code.hpp  cpp_writer.hpp  date.hpp  date_time.hpp  day_time_duration.hpp  decimal.hpp  doc_generator.hpp  dtd_model.hpp  dtd_parser.hpp  dtd_to_rng.hpp  dtd_translator.hpp  dtd_writer.hpp  duration.hpp  element_decl.hpp  expat_reader.hpp  facet_set.hpp  http_transport.hpp  integer.hpp  json_value.hpp  mime_multipart.hpp  model_group.hpp  model_group_def.hpp  mtom_transport.hpp  naming.hpp  occurrence.hpp  open_content.hpp  ostream_writer.hpp  qname.hpp  rng_compact_parser.hpp  (+51 more)
src/lib/: CMakeLists.txt  any_element.cpp  codegen.cpp  codegen_internal.hpp  cpp_writer.cpp  date.cpp  date_time.cpp  day_time_duration.cpp  decimal.cpp  doc_generator.cpp  dtd_parser.cpp  dtd_to_rng.cpp  dtd_translator.cpp  dtd_writer.cpp  duration.cpp  expat_reader.cpp  http_transport.cpp  integer.cpp  json_codegen.cpp  json_codegen.hpp  mime_multipart.cpp  model_group.cpp  mtom_transport.cpp  naming.cpp  ostream_writer.cpp  rng_compact_parser.cpp  rng_compact_writer.cpp  rng_parser.cpp  rng_simplify.cpp  rng_translator.cpp  rng_writer.cpp  schema_fetcher.cpp  schema_parser.cpp  schema_set.cpp  schema_to_dtd.cpp  schematron_overlay.cpp  schematron_parser.cpp  soap_common.hpp  soap_envelope.cpp  soap_fault.cpp  (+18 more)
test/: CMakeLists.txt
test/feature/: CMakeLists.txt  any_element_round_trip_test.cpp  cli_test.cpp  cmake_fetch_install_test.cpp  cmake_fetch_integration_test.cpp  cmake_integration_test.cpp  cmake_split_integration_test.cpp  codegen_compile_test.cpp  json_round_trip_test.cpp  serialization_test.cpp  xml_round_trip_test.cpp
test/integration/: CMakeLists.txt
test/integration/docbook/: CMakeLists.txt  docbook_test.cpp
test/integration/docbook/schema/: README
test/integration/fixml/: CMakeLists.txt  fixml_test.cpp
test/integration/fixml/schema/: README
test/integration/ubl/: CMakeLists.txt  ubl_test.cpp
test/integration/ubl/schema/: README
test/unit/: CMakeLists.txt  any_attribute_test.cpp  any_element_test.cpp  codegen_test.cpp  cpp_code_test.cpp  date_test.cpp  date_time_test.cpp  day_time_duration_test.cpp  decimal_test.cpp  doc_generator_test.cpp  dtd_model_test.cpp  dtd_parser_test.cpp  dtd_to_rng_test.cpp  dtd_translator_test.cpp  dtd_writer_test.cpp  duration_test.cpp  http_transport_test.cpp  integer_test.cpp  json_codegen_test.cpp  json_value_test.cpp  mime_multipart_test.cpp  mtom_transport_test.cpp  naming_test.cpp  qname_test.cpp  rng_compact_parser_test.cpp  rng_compact_writer_test.cpp  rng_parser_test.cpp  rng_pattern_test.cpp  rng_roundtrip_test.cpp  rng_simplify_test.cpp  rng_translator_test.cpp  rng_writer_test.cpp  schema_fetcher_test.cpp  schema_model_test.cpp  schema_parser_test.cpp  schema_set_test.cpp  schema_test.cpp  schema_to_dtd_test.cpp  schematron_model_test.cpp  schematron_overlay_test.cpp  (+36 more)
xb/: CMakeLists.txt  config.hpp.in
xb_testing/: CMakeLists.txt
