find_package(Catch2 REQUIRED)

macro(xb_add_test test_name)
  set(exe_name ${test_name}_test)
  set(src_name ${exe_name}.cpp)
  add_executable(${exe_name} ${src_name})
  target_link_libraries(${exe_name} PRIVATE
    xb::header
    Catch2::Catch2WithMain)
  set_target_properties(${exe_name}
    PROPERTIES
    CXX_STANDARD ${xb_CXX_STANDARD})
  add_test(${test_name} ${exe_name})
endmacro()
